--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 					<!-- X SVG -->
 					<svg id="xsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36"><path fill="#7289DA" d="M21.533 18.002L33.768 5.768c.976-.976.976-2.559 0-3.535-.977-.977-2.559-.977-3.535 0L17.998 14.467 5.764 2.233c-.976-.977-2.56-.977-3.535 0-.977.976-.977 2.559 0 3.535l12.234 12.234L2.201 30.265c-.977.977-.977 2.559 0 3.535.488.488 1.128.732 1.768.732s1.28-.244 1.768-.732l12.262-12.263 12.234 12.234c.488.488 1.128.732 1.768.732.64 0 1.279-.244 1.768-.732.976-.977.976-2.559 0-3.535L21.533 18.002z"/></svg>
 					<!-- Arrow SVG -->
-					<svg  id="arrowsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36"><path fill="#7289DA" d="M36 32c0 2.209-1.791 4-4 4H4c-2.209 0-4-1.791-4-4V4c0-2.209 1.791-4 4-4h28c2.209 0 4 1.791 4 4v28z"/><path fill="#99AAB5" d="M7 14h9V7l13 11-13 11v-7H7z"/></svg>
+					<div class="submitDiv">
+						<span id="sentTooltip" class="tooltiptext">Sent!</span>
+						<svg  id="arrowsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36"><path fill="#7289DA" d="M36 32c0 2.209-1.791 4-4 4H4c-2.209 0-4-1.791-4-4V4c0-2.209 1.791-4 4-4h28c2.209 0 4 1.791 4 4v28z"/><path fill="#99AAB5" d="M7 14h9V7l13 11-13 11v-7H7z"/></svg>
+					</div>
 				</div>
 			</div>
 		</main>
