Add tooltip for saving frame

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<!-- Arrow SVG -->
 					<div class="submitDiv">
 						<span id="sentTooltip" class="tooltiptext">Sent!</span>
+						<span id="frameTooltip" class="tooltiptext">Save</span>
 						<svg  id="arrowsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36"><path fill="#7289DA" d="M36 32c0 2.209-1.791 4-4 4H4c-2.209 0-4-1.791-4-4V4c0-2.209 1.791-4 4-4h28c2.209 0 4 1.791 4 4v28z"/><path fill="#99AAB5" d="M7 14h9V7l13 11-13 11v-7H7z"/></svg>
 					</div>
 				</div>
