Break up js files

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			</div>
 		</main>
 	</body>
+	<script language="JavaScript" type="text/javascript" src="./js/board.js"></script>
+	<script language="JavaScript" type="text/javascript" src="./js/tile.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/main.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/jscolor.js"></script>
 </html>
