Add display of saved frames

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	</head>
 	<body style="background: #2C2F33;">
 		<main>
+			<div id="sidebarDiv"></div>
 			<div id="canvasDiv" style="background: #23272A;">
 				<canvas id="canvasColours" width="150px" height="150px"></canvas>
 				<canvas id="canvasGrid" width="150px" height="150px"></canvas>
@@ -38,6 +39,7 @@
 	</body>
 	<script language="JavaScript" type="text/javascript" src="./js/board.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/tile.js"></script>
+	<script language="JavaScript" type="text/javascript" src="./js/frame.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/main.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/jscolor.js"></script>
 </html>
