--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,6 +9,7 @@
 	<title>Sir Cinnamon's SenseHat Controller</title>
 	<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script crossorigin src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/jscolor.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/main.js"></script>
 	<script language="JavaScript" type="text/javascript" src="./js/sensehat-react.min.js"></script>
